fix(client): fix content can not auto wrap, close #269

--- a/packages/client/src/styles/card.scss
+++ b/packages/client/src/styles/card.scss
@@ -29,6 +29,7 @@
 
   .vcard {
     flex: 1;
+    width: 0;
     padding-bottom: 0.5em;
     border-bottom: 1px dashed var(--waline-border-color);
 
